<resources>
    <string name="app_name">Deadline</string>
    <string name="action_settings">Settings</string>
    <string name="setting_accurateUpdate">Accurate Update</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="action_feelingLucky">Feeling Lucky</string>
    <string name="action_about">About</string>
    <string name="add">add</string>
    <string name="setting_default_color">Default Color</string>
    <string name="setting_default_city">DefaultCity(weather)</string>
</resources>
